# skydive-logbook

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DECISIONS.md  LICENSE  README.md  SECURITY.md  config.toml.example  pyproject.toml  skydive-logbook.spec
.claude/agents/: api-contract-steward.md  backend-engineer.md  code-reviewer.md  frontend-engineer.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
backend/: __init__.py  config.py  main.py
backend/api/: __init__.py  aads.py  containers.py  deps.py  dropzones.py  errors.py  jumpers.py  jumps.py  mains.py  middleware.py  onboarding.py  openapi.py  ops.py  people.py  reserves.py  rest.py  rigs.py  uploads.py
backend/models/: __init__.py  _component_base.py  aad.py  common.py  container.py  dropzone.py  jump.py  jumper.py  main.py  onboarding.py  person.py  reserve.py  rig.py  rig_snapshot.py
backend/observability/: __init__.py  logging.py
backend/scripts/: __init__.py  launch_desktop.py  reindex.py  verify.py
backend/services/: __init__.py  _timestamps.py  _wear_counts.py  _write_lock.py  aad_service.py  container_service.py  dropzone_service.py  file_service.py  jump_service.py  jumper_credential_service.py  jumper_service.py  main_service.py  onboarding_service.py  people_service.py  reindex_service.py  reserve_service.py  rig_reconcile_service.py  rig_service.py  stats_service.py  update_check_service.py
backend/storage/: __init__.py  bootstrap.py  filesystem.py  index.py  jumper_attachments.py  jumper_migration.py  lockfile.py  manifest.py  reconcile.py  trash.py  verify.py
backend/storage/templates/: LOGBOOK_README.md  __init__.py
backend/tests/: _crash_child.py  conftest.py  test_aad_roundtrip.py  test_aad_service.py  test_bootstrap.py  test_component_base.py  test_component_jump_count_derived.py  test_concurrent_writes.py  test_config.py  test_container_roundtrip.py  test_container_service.py  test_correlation_middleware.py  test_cors_configurability.py  test_crash_recovery.py  test_create_jump.py  test_d53_jump_fields_roundtrip.py  test_d58_starred_rig.py  test_d59_rig_display_order.py  test_d60_starred_dropzone.py  test_delete_jump.py  test_dropzone_crash_recovery.py  test_dropzone_roundtrip.py  test_dropzone_service.py  test_error_envelope_uniformity.py  test_errors.py  test_filesystem.py  test_get_jump.py  test_idempotency_key.py  test_index.py  test_index_d47_extension.py  test_index_schema_versioning.py  test_jumper_attachment_service.py  test_jumper_attachments_storage.py  test_jumper_credential_crud.py  test_jumper_credentials_roundtrip.py  test_jumper_membership_crud.py  test_jumper_migration.py  test_jumper_roundtrip.py  test_jumper_service.py  test_jumper_tandem_currency_reset.py  (+50 more)
backend/xml/: __init__.py  serialize.py  validator.py
backend/xml/schema/: SCHEMA.v1.xsd
docs/: architecture.md  build.md  decisions-draft.md  historical-reviews.md
docs/internal/session-handoffs/: 2026-04-30.md
docs/mockups/: ui-mockup.html
docs/reviews/: 2026-04-29-progress.html  2026-04-29-tech-debt-audit.html  2026-04-30-progress.html
frontend/: .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js  vitest.config.js
frontend/src/: App.jsx  Sidebar.jsx  api.js  index.css  lineTypes.js  mock.js  primitives.jsx  rigShape.js  units.js
frontend/src/modals/: AddComponentModal.jsx  AddRigModal.jsx  ComponentDetailModal.jsx  ComponentModal.jsx  DropzoneModal.jsx  EditAadModeModal.jsx  EditRigModal.jsx  JumpDetailModal.jsx  LogJumpModal.jsx  RelineModal.jsx
frontend/src/views/: AssociationsEditor.jsx  CareerStats.jsx  Dashboard.jsx  Dropzones.jsx  Identity.jsx  IdentityEditFull.jsx  Inventory.jsx  Jumps.jsx  MedicalsEditor.jsx  MyRig.jsx  OnboardingWizard.jsx  Profile.jsx  Settings.jsx  TandemRatingsEditor.jsx  identityEditOrchestrator.js  identityEditStaged.js
frontend/src/views/onboarding/: AadStep.jsx  AlreadyDoneStep.jsx  ContainerStep.jsx  DropzoneStep.jsx  FinishStep.jsx  FolderStep.jsx  JumperStep.jsx  MainStep.jsx  ReserveStep.jsx  ResumeBanner.jsx  RigStep.jsx  StepFrame.jsx  formAtoms.jsx
frontend/test/: d60-starred-dropzone.test.jsx  identityEditFull.test.jsx  identityEditOrchestrator.test.js  setup.js  views.smoke.test.jsx
reviews/: 2026-04-23-api.md  2026-04-23-decisions-drift.md  2026-04-23-forward-review.md  2026-04-23-invariants.md  2026-04-23-research-multipart.md  2026-04-23-research-platform.md  2026-04-23-research-sqlite.md  2026-04-23-tests.md  2026-04-24-rig-manager-integration.md  2026-04-27-design-critique-mockup.md  2026-04-28-deep-review.md  2026-04-28-frontend-wcag-audit.md  2026-04-28-security-posture-audit.md  2026-04-29-pyright-rollout.md  2026-04-30-finish-open-items.md  2026-05-14-pre-launch-execution.md  2026-05-14-second-opinion.md  2026-05-14-tech-debt-audit.md  2026-05-15-chatgpt-findings-deep-dive.md  2026-05-15-chatgpt-technical-sweep-verification.md  2026-05-15-code-debt-deep-audit.md  2026-05-15-session-handoff.md  2026-05-15-slice-plan.md
scripts/: repo-cleanup.sh
